--- a/frontendUnipalama/package.json
+++ b/frontendUnipalama/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.1.3",
     "date-fns": "^4.1.0",
     "heroku": "^7.66.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
