--- a/frontendUnipalama/package.json
+++ b/frontendUnipalama/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "heroku": "^7.66.4",
     "html2canvas": "^1.4.1",
+    "javascript-signature-sdk": "^2.0.2",
     "jspdf": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
