Extendido el tiempo a 30 dias de expiracion del token

--- a/backendUnipalma/.env
+++ b/backendUnipalma/.env
@@ -1,4 +1,5 @@
 #MONGO_URI= mongodb+srv://brayan-g15:cuenca1502@trabajo1.k9anlje.mongodb.net/appecommerce?retryWrites=true&w=majority
+# MONGO_URI= mongodb+srv://brayan-g15:PLmqdJr2J@j2dmt@cluster0.kqv3p76.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGO_URI= mongodb://127.0.0.1:27017/users
 JWT_SECRET=palabrasupersecreta
 
